<resources>
    <string name="app_name">Pronap Mobile</string>
    <string name="brh_name">Banque de la République d\'Haïti</string>
    <string name="pronap_acronym">PRONAP</string>
    <string name="pronap_slogan">Paiement Mobile simple et sécurisé</string>

    <!-- Account String -->
    <string name="account_proposal">Pas de compte? Créer un nouveau</string>
    <string name="login">Se Connecter</string>
    <string name="email">Email</string>
    <string name="password">Mot de Passe</string>
    <string name="password_confirmation">Confirmer Mot de Passe</string>
    <string name="full_name">Nom Complet</string>
    <string name="register_title">Créer un Compte PRONAP-MOBILE</string>
    <string name="register">Créer Compte</string>
    <string name="password_forgotten">Mot de passe oublié?</string>

    <!-- Vendor Account -->
    <string name="code">Effectuer Paiement</string>
    <string name="routing_number">Numéro Routage Bancaire</string>
    <string name="account_number">Numéro Compte Bancaire</string>
    <string name="phone">Téléphone</string>
    <string name="validate_profile">Valider Profil</string>
    <string name="product_description">Description Produit</string>
    <string name="price">Prix</string>
    <string name="generate_code">Générer le Code de Paiement</string>
    <string name="request_payment_title">Entrer les Informations sur le Paiement</string>
    <string name="qr_code_directive">
        Demandez à votre Acheteur de scanner le QR Code avec cette application sur son portable
    </string>

    <!-- Debit Card info -->
    <string name="card_debit_info">Informations de la Carte Débit</string>
    <string name="card_number">Numéro Carte Débit</string>
    <string name="card_holder_name">Nom du Titulaire (sur la carte)</string>
    <string name="card_expiry_date">Exp (MM / YYYY)</string>
    <string name="card_cvv">CVV</string>
    <string name="validate">Valider</string>


    <!-- Global Settings and Menu -->
    <string name="action_settings">Settings</string>
    <string name="vendor_account">Compte Vendeur</string>
    <string name="manage_card">Gérer Carte Débit</string>
    <string name="request_payment">Préparer Paiement</string>
    <string name="make_payment">Effectuer Paiement</string>
    <string name="select_role">Changer de Role</string>
    <string name="vendor">Vendeur</string>
    <string name="buyer">Acheteur</string>

    <!-- Pages and Popup Titles and Description -->
    <string name="qr_code_scan_title">Scanner le QR Code</string>
    <string name="qr_code_scan_description">
        Utiliser la Caméra pour scanner le QR Code du Paiement que vous voulez effectuer. Toutes les
        informations du Paiement en question seront automatiquement détectées, puis affichées pour
        être validées.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
