<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vendor"
            android:icon="@drawable/ic_business_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/vendor_account" />
        <item
            android:id="@+id/nav_card"
            android:icon="@drawable/ic_credit_card_black_24dp"
            android:tint="@color/button_grey"
            android:title="@string/manage_card" />
    </group>

    <group android:checkableBehavior="none" >
        <item
            android:id="@+id/nav_roles"
            android:title="@string/select_role"
            android:icon="@drawable/ic_credit_card_black_24dp" >
            <menu>
                <item
                    android:id="@+id/nav_buyer_role"
                    android:tint="@color/button_grey"
                    android:title="@string/buyer"
                    app:actionViewClass="android.widget.CheckBox"/>
                <item
                    android:id="@+id/nav_vendor_role"
                    android:tint="@color/button_grey"
                    android:title="@string/vendor"
                    app:actionViewClass="android.widget.CheckBox" />
            </menu>
        </item>
    </group>

</menu>